# CGOL-Shader

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: game.frag  gui.frag  noise.frag
src/: main.cpp
